--- a/CSS Grid/style.css
+++ b/CSS Grid/style.css
@@ -1,11 +1,12 @@
 .container {
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
+    grid-template-rows: 1fr;
 }
 .zone {
     cursor: pointer;
-    display: inline-block;
+    /* display: inline-block; */
     text-align: center;
     font-size: 10em;
     border-radius: 4px;
