--- a/CSS Grid/style.css
+++ b/CSS Grid/style.css
@@ -3,6 +3,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
     grid-template-rows: 1fr;
+    justify-items: end;
 }
 .zone {
     cursor: pointer;
