--- a/CSS Grid/style.css
+++ b/CSS Grid/style.css
@@ -1,9 +1,10 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 20px;
     grid-template-rows: 1fr;
-    justify-items: end;
+    /* justify-items: end; */
+    /* align-items: start; */
 }
 .zone {
     cursor: pointer;
