add new project for css grid sample

--- a/CSS Grid/style.css
+++ b/CSS Grid/style.css
@@ -6,6 +6,13 @@
     /* justify-items: end; */
     /* align-items: start; */
 }
+
+.green {
+    grid-column: span 2;
+    grid-row: 1/3;
+    /* justify-self: start; */
+}
+
 .zone {
     cursor: pointer;
     /* display: inline-block; */
